# fun-projects

01-snake-game/: pyproject.toml
01-snake-game/01_snake_game/: app.py
