[tool.poetry]
name = "01-snake-game"
version = "0.1.0"
description = ""
authors = ["Hammad Mohiuddin <hammad.mohiuddin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
